SWITCHYARD-205 Fix checkstyle issues